--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,14 @@
         android:onClick="stopRun"
         />
 
+    <Button
+        android:id="@+id/flv_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="dumpFlv"
+        android:text="flv转Mp4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="523dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
